Bug 1878819 - Part 2. Dispatch WidgetDragEvent to APZ controller thread and main thread. r=geckoview-reviewers,botond,ohall
Since we support drag event with fission, we have to set layers id.  So
at first, we have to dispatch this to APZ controller thread, then
dispatch it with layers id.

Differential Revision: https://phabricator.services.mozilla.com/D222394

UltraBlame original commit: fa202adc6e9d90707a76952b9dda00e4e94c9a7d

--- a/mobile/android/geckoview/src/androidTest/assets/www/dnd.html
+++ b/mobile/android/geckoview/src/androidTest/assets/www/dnd.html
@@ -46,6 +46,7 @@ DOMContentLoaded
 )
 =
 >
+{
 document
 .
 querySelector
@@ -70,6 +71,57 @@ preventDefault
 (
 )
 )
+;
+document
+.
+querySelector
+(
+"
+#
+drag
+"
+)
+.
+addEventListener
+(
+"
+dragstart
+"
+(
+)
+=
+>
+{
+if
+(
+window
+.
+parent
+!
+=
+window
+)
+{
+window
+.
+parent
+?
+.
+postMessage
+(
+"
+dragstart
+"
+"
+*
+"
+)
+;
+}
+}
+)
+;
+}
 )
 ;
 <
