Bug 1921384 - [devtools] Pass expected shape to onAvailableArray in legacy console messages listener. r=ochameau,devtools-reviewers.
Add test case in about debugging for console API messages, and fix the
helper function that was asserting evaluation results, which was broken.

Differential Revision: https://phabricator.services.mozilla.com/D224088

UltraBlame original commit: bc70b1e542b48d131cf8fa021fdbf8e24e92a63a

--- a/devtools/client/aboutdebugging/test/browser/resources/service-workers/controlled-sw.html
+++ b/devtools/client/aboutdebugging/test/browser/resources/service-workers/controlled-sw.html
@@ -185,6 +185,35 @@ worker
 ;
 }
 ;
+window
+.
+installServiceWorkerAndPause
+=
+function
+(
+)
+{
+registration
+.
+installing
+.
+postMessage
+(
+"
+install
+-
+service
+-
+worker
+-
+and
+-
+pause
+"
+)
+;
+}
+;
 /
 /
 Register
