--- a/browser/base/content/navigator-toolbox.inc.xhtml
+++ b/browser/base/content/navigator-toolbox.inc.xhtml
@@ -64,6 +64,27 @@ toolbox
 "
 >
 <
+script
+src
+=
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+navigator
+-
+toolbox
+.
+js
+"
+/
+>
+<
 vbox
 id
 =
@@ -6559,26 +6580,6 @@ context
 "
 placesContext
 "
-onpopupshowing
-=
-"
-document
-.
-getElementById
-(
-'
-PlacesToolbar
-'
-)
-.
-_placesView
-.
-_onChevronPopupShowing
-(
-event
-)
-;
-"
 /
 >
 <
@@ -7044,43 +7045,6 @@ _placesView
 )
 ;
 "
-onpopupshowing
-=
-"
-BookmarkingUI
-.
-onPopupShowing
-(
-event
-)
-;
-if
-(
-!
-this
-.
-parentNode
-.
-_placesView
-)
-new
-PlacesMenu
-(
-event
-place
-:
-parent
-=
-{
-PlacesUtils
-.
-bookmarks
-.
-menuGuid
-}
-)
-;
-"
 tooltip
 =
 "
@@ -7297,36 +7261,6 @@ context
 "
 placesContext
 "
-onpopupshowing
-=
-"
-if
-(
-!
-this
-.
-parentNode
-.
-_placesView
-)
-new
-PlacesMenu
-(
-event
-place
-:
-parent
-=
-{
-PlacesUtils
-.
-bookmarks
-.
-toolbarGuid
-}
-)
-;
-"
 >
 <
 menuitem
@@ -7468,36 +7402,6 @@ context
 "
 placesContext
 "
-onpopupshowing
-=
-"
-if
-(
-!
-this
-.
-parentNode
-.
-_placesView
-)
-new
-PlacesMenu
-(
-event
-place
-:
-parent
-=
-{
-PlacesUtils
-.
-bookmarks
-.
-unfiledGuid
-}
-)
-;
-"
 /
 >
 <
@@ -7571,36 +7475,6 @@ context
 =
 "
 placesContext
-"
-onpopupshowing
-=
-"
-if
-(
-!
-this
-.
-parentNode
-.
-_placesView
-)
-new
-PlacesMenu
-(
-event
-place
-:
-parent
-=
-{
-PlacesUtils
-.
-bookmarks
-.
-mobileGuid
-}
-)
-;
 "
 /
 >
