Bug 1918710: Move tab to tab group from tab context menu r=dao,fluent-reviewers,tabbrowser-reviewers,bolsson
Differential Revision: https://phabricator.services.mozilla.com/D222487

UltraBlame original commit: 501a36c82c109d9b3aa563081d208ac7c62230c5

--- a/browser/base/content/main-popupset.inc.xhtml
+++ b/browser/base/content/main-popupset.inc.xhtml
@@ -123,7 +123,7 @@ menuitem
 id
 =
 "
-context_addTabToNewGroup
+context_moveTabToNewGroup
 "
 data
 -
@@ -138,7 +138,7 @@ tab
 -
 context
 -
-add
+move
 -
 tab
 -
@@ -169,6 +169,101 @@ hidden
 true
 "
 /
+>
+<
+menu
+id
+=
+"
+context_moveTabToGroup
+"
+data
+-
+lazy
+-
+l10n
+-
+id
+=
+"
+tab
+-
+context
+-
+move
+-
+tab
+-
+to
+-
+group
+"
+data
+-
+l10n
+-
+args
+=
+'
+{
+"
+tabCount
+"
+:
+1
+}
+'
+hidden
+=
+"
+true
+"
+>
+<
+menupopup
+id
+=
+"
+context_moveTabToGroupPopupMenu
+"
+>
+<
+menuitem
+id
+=
+"
+context_moveTabToGroupNewGroup
+"
+data
+-
+lazy
+-
+l10n
+-
+id
+=
+"
+tab
+-
+context
+-
+new
+-
+group
+"
+/
+>
+<
+menuseparator
+/
+>
+<
+/
+menupopup
+>
+<
+/
+menu
 >
 <
 menuseparator
