Bug 1899598 - Hide the horizontal tab strip when vertical tabs are enabled. r=mconley,desktop-theme-reviewers,tabbrowser-reviewers,sidebar-reviewers,emilio,willdurand,sclements
* Remove the #titlebar element, and ensure toolbars that comprise the titlebar get a .browser-titlebar class
* Ensure we call TabBarVisibility.update when initializing with verticalTab=true
* Adjust TabBarVisibility logic so we allow for the vertical tabs case
* Give #navigator-toolbar z-index: var(--browser-area-z-index-toolbox) to ensure the urlbar view doesnt get clipped behind the lower elements

Differential Revision: https://phabricator.services.mozilla.com/D222059

UltraBlame original commit: 98b6ddc6deed7058d61ad2cce5b2473f11e7be9a

--- a/browser/base/content/navigator-toolbox.inc.xhtml
+++ b/browser/base/content/navigator-toolbox.inc.xhtml
@@ -85,14 +85,6 @@ js
 /
 >
 <
-vbox
-id
-=
-"
-titlebar
-"
->
-<
 !
 -
 -
@@ -123,6 +115,9 @@ toolbar
 chromeclass
 -
 menubar
+browser
+-
+titlebar
 titlebar
 -
 color
@@ -253,6 +248,9 @@ class
 browser
 -
 toolbar
+browser
+-
+titlebar
 titlebar
 -
 color
@@ -1154,10 +1152,6 @@ xhtml
 toolbar
 >
 <
-/
-vbox
->
-<
 toolbar
 id
 =
@@ -1286,6 +1280,24 @@ context
 -
 menu
 "
+>
+<
+hbox
+class
+=
+"
+titlebar
+-
+spacer
+"
+type
+=
+"
+pre
+-
+tabs
+"
+/
 >
 <
 toolbartabstop
@@ -5971,6 +5983,33 @@ closed2
 /
 toolbaritem
 >
+<
+hbox
+class
+=
+"
+titlebar
+-
+spacer
+"
+type
+=
+"
+post
+-
+tabs
+"
+/
+>
+#
+include
+titlebar
+-
+items
+.
+inc
+.
+xhtml
 <
 /
 toolbar
