Backed out changeset 98b6ddc6deed (bug 1899598) for causing marionette failures on test_initialize_vertical_tabs.py. CLOSED TREE
UltraBlame original commit: d582bd2b20c70e5592465ea1ebd979bd65f2157e

--- a/browser/base/content/navigator-toolbox.inc.xhtml
+++ b/browser/base/content/navigator-toolbox.inc.xhtml
@@ -85,6 +85,14 @@ js
 /
 >
 <
+vbox
+id
+=
+"
+titlebar
+"
+>
+<
 !
 -
 -
@@ -115,9 +123,6 @@ toolbar
 chromeclass
 -
 menubar
-browser
--
-titlebar
 titlebar
 -
 color
@@ -248,9 +253,6 @@ class
 browser
 -
 toolbar
-browser
--
-titlebar
 titlebar
 -
 color
@@ -1152,6 +1154,10 @@ xhtml
 toolbar
 >
 <
+/
+vbox
+>
+<
 toolbar
 id
 =
@@ -1280,24 +1286,6 @@ context
 -
 menu
 "
->
-<
-hbox
-class
-=
-"
-titlebar
--
-spacer
-"
-type
-=
-"
-pre
--
-tabs
-"
-/
 >
 <
 toolbartabstop
@@ -5983,33 +5971,6 @@ closed2
 /
 toolbaritem
 >
-<
-hbox
-class
-=
-"
-titlebar
--
-spacer
-"
-type
-=
-"
-post
--
-tabs
-"
-/
->
-#
-include
-titlebar
--
-items
-.
-inc
-.
-xhtml
 <
 /
 toolbar
