Bug 1921278 [wpt PR 48350] - [css-scroll-snap-2] Make scroll-start-target single-param, a=testonly
Automatic update from web-platform-tests
[css-scroll-snap-2] Make scroll-start-target single-param

Per the spec[1], this patch makes the scroll-start-target property take
a single argument, and makes it no longer a shorthand.

The syntax used to be:
  scroll-start-target: <block> <inline>
 where <block> and <inline> could be "auto" or "none",
but it should now be:
  scroll-start-target: [auto|none]

Follow-up work:

Now that the property no longer differentiates the axes, each
scroll-start-target is to be scrolled to in both axes. The
CSSWG has resolved[2] to handle competing scroll-start-targets by
scrolling to each one in reverse-DOM-order. This patch only handles the
change in parsing, a follow-up patch will handle the resolution of
competing targets.

[1] https://drafts.csswg.org/css-scroll-snap-2/#scroll-start-target
[2] https://github.com/w3c/csswg-drafts/issues/10774#issuecomment-2358920264

Bug: 40909052, 368038561
Change-Id: I2a773dd8d4291602c6b69f47e0e648fd8a28e1fe
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5881188
Commit-Queue: David Awogbemila <awogbemilachromium.org>
Reviewed-by: Anders Hartvoll Ruud <andruudchromium.org>
Cr-Commit-Position: refs/heads/main{#1360557}

--

wpt-commits: e2853e8fee00c86310404c49ec10d000c3f83b2c
wpt-pr: 48350

UltraBlame original commit: 05fe12d898f276b825e14c75f35c7e547e524cff

--- a/testing/web-platform/tests/css/css-scroll-snap-2/scroll-start-target/scroll-start-target-nested-container.tentative.html
+++ b/testing/web-platform/tests/css/css-scroll-snap-2/scroll-start-target/scroll-start-target-nested-container.tentative.html
@@ -185,6 +185,29 @@ js
 script
 >
 <
+script
+src
+=
+"
+/
+css
+/
+css
+-
+animations
+/
+support
+/
+testcommon
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
@@ -594,111 +617,6 @@ resolve
 )
 ;
 }
-async
-function
-waitForCSSProperty
-(
-element
-property
-value
-)
-{
-return
-new
-Promise
-(
-(
-resolve
-)
-=
->
-{
-if
-(
-getComputedStyle
-(
-element
-)
-[
-property
-]
-=
-=
-value
-)
-{
-resolve
-(
-)
-;
-}
-else
-{
-requestAnimationFrame
-(
-async
-(
-)
-=
->
-{
-await
-waitForCSSProperty
-(
-element
-property
-value
-)
-;
-resolve
-(
-)
-;
-}
-)
-}
-}
-)
-;
-}
-async
-function
-waitForDisplay
-(
-element
-value
-)
-{
-return
-waitForCSSProperty
-(
-element
-"
-display
-"
-value
-)
-;
-}
-async
-function
-waitForOverflow
-(
-element
-value
-)
-{
-return
-waitForCSSProperty
-(
-element
-"
-overflow
-"
-value
-)
-;
-}
 let
 initial_expected_scroll_top
 =
@@ -758,12 +676,9 @@ none
 "
 ;
 await
-waitForDisplay
+waitForAnimationFrames
 (
-inner_container
-"
-none
-"
+2
 )
 ;
 assert_equals
@@ -799,12 +714,9 @@ block
 "
 ;
 await
-waitForDisplay
+waitForAnimationFrames
 (
-inner_container
-"
-block
-"
+2
 )
 ;
 assert_equals
@@ -897,12 +809,9 @@ scroll
 "
 ;
 await
-waitForOverflow
+waitForAnimationFrames
 (
-inner_container
-"
-scroll
-"
+2
 )
 ;
 /
@@ -1019,12 +928,9 @@ visible
 "
 ;
 await
-waitForOverflow
+waitForAnimationFrames
 (
-inner_container
-"
-visible
-"
+2
 )
 ;
 assert_equals
@@ -1184,19 +1090,9 @@ auto
 "
 ;
 await
-waitForCSSProperty
+waitForAnimationFrames
 (
-target
-"
-scroll
--
-start
--
-target
-"
-"
-auto
-"
+2
 )
 ;
 }
@@ -1248,19 +1144,9 @@ auto
 "
 ;
 await
-waitForCSSProperty
+waitForAnimationFrames
 (
-inner_container
-"
-scroll
--
-start
--
-target
-"
-"
-auto
-"
+2
 )
 ;
 /
@@ -1352,19 +1238,9 @@ none
 "
 ;
 await
-waitForCSSProperty
+waitForAnimationFrames
 (
-target
-"
-scroll
--
-start
--
-target
-"
-"
-none
-"
+2
 )
 ;
 assert_equals
@@ -1506,31 +1382,9 @@ none
 "
 ;
 await
-waitForCSSProperty
+waitForAnimationFrames
 (
-inner_container
-"
-overflow
-"
-"
-visible
-"
-)
-;
-await
-waitForCSSProperty
-(
-inner_container
-"
-scroll
--
-start
--
-target
-"
-"
-none
-"
+2
 )
 ;
 }
@@ -1582,19 +1436,9 @@ auto
 "
 ;
 await
-waitForCSSProperty
+waitForAnimationFrames
 (
-inner_container
-"
-scroll
--
-start
--
-target
-"
-"
-auto
-"
+2
 )
 ;
 assert_equals
@@ -1640,12 +1484,9 @@ scroll
 "
 ;
 await
-waitForOverflow
+waitForAnimationFrames
 (
-inner_container
-"
-scroll
-"
+2
 )
 ;
 assert_equals
