Bug 1920714 [wpt PR 48324] - Refactor selectlist tests [4/4], a=testonly
Automatic update from web-platform-tests
Refactor selectlist tests [4/4]

This is a set of refactors that:
 1. re-points existing WPTs and web_tests from <selectlist> to
    <select style="appearance:base".
 2. renames tests from `-selectlist-` to `-select-`

These are done in batches, to make the review task easier. One CL
will re-point tests (without renaming them) and the next will do
the rename.

These are all in service of removing the <selectlist> prototype.

Fixed: 335458492
Change-Id: I7eb34f254d713fd3e9a0123812f831df832a45fa
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5857252
Commit-Queue: Mason Freed <masonfchromium.org>
Reviewed-by: Joey Arhar <jarharchromium.org>
Cr-Commit-Position: refs/heads/main{#1360756}

--

wpt-commits: b1c4aff0b6d504226b5e00e08a4bd4b881471e5c
wpt-pr: 48324

UltraBlame original commit: bee4f9efd55fface061a6e1a0c0d6467b2196237

--- a/testing/web-platform/tests/html/semantics/forms/the-select-element/select-marker-end-aligned.tentative.html
+++ b/testing/web-platform/tests/html/semantics/forms/the-select-element/select-marker-end-aligned.tentative.html
@@ -9,10 +9,14 @@ html
 -
 Tests
 that
+<
 select
-respects
-explicit
-size
+>
+marker
+is
+end
+-
+aligned
 -
 -
 >
@@ -42,11 +46,13 @@ match
 href
 =
 "
-selectlist
+select
 -
-font
+marker
 -
-size
+end
+-
+aligned
 -
 ref
 .
@@ -56,39 +62,91 @@ html
 "
 >
 <
+div
+>
+<
+select
+>
+<
+option
+>
+<
+/
+option
+>
+<
+/
+select
+>
+<
+/
+div
+>
+<
 style
 >
+/
+*
+This
+is
+the
+only
+difference
+between
+the
+test
+and
+the
+reference
+:
+*
+/
 select
 {
-font
--
-size
+width
 :
-48px
+200px
 ;
 }
-<
-/
-style
->
-<
+div
+{
+width
+:
+300px
+;
+display
+:
+flex
+;
+justify
+-
+content
+:
+flex
+-
+end
+;
+}
 select
->
-<
-option
->
-option
-<
-/
-option
->
-<
-/
-select
->
-<
+{
+border
+-
 style
->
+:
+none
+;
+background
+-
+color
+:
+rgba
+(
+0
+0
+0
+0
+)
+}
 select
 :
 :
