--- a/testing/web-platform/tests/html/semantics/forms/the-select-element/select-marker-visible-overflow.tentative.html
+++ b/testing/web-platform/tests/html/semantics/forms/the-select-element/select-marker-visible-overflow.tentative.html
@@ -9,14 +9,22 @@ html
 -
 Tests
 that
+the
+marker
+is
+visible
+when
+the
 <
 select
 >
-marker
-is
-end
--
-aligned
+contains
+more
+text
+than
+it
+can
+show
 -
 -
 >
@@ -46,13 +54,13 @@ match
 href
 =
 "
-selectlist
+select
 -
 marker
 -
-end
+visible
 -
-aligned
+overflow
 -
 ref
 .
@@ -62,6 +70,20 @@ html
 "
 >
 <
+style
+>
+select
+{
+width
+:
+100px
+;
+}
+<
+/
+style
+>
+<
 div
 >
 <
@@ -70,6 +92,36 @@ select
 <
 option
 >
+&
+nbsp
+;
+&
+nbsp
+;
+&
+nbsp
+;
+&
+nbsp
+;
+&
+nbsp
+;
+&
+nbsp
+;
+&
+nbsp
+;
+&
+nbsp
+;
+&
+nbsp
+;
+&
+nbsp
+;
 <
 /
 option
@@ -79,74 +131,8 @@ option
 select
 >
 <
-/
-div
->
-<
 style
 >
-/
-*
-This
-is
-the
-only
-difference
-between
-the
-test
-and
-the
-reference
-:
-*
-/
-select
-{
-width
-:
-200px
-;
-}
-div
-{
-width
-:
-300px
-;
-display
-:
-flex
-;
-justify
--
-content
-:
-flex
--
-end
-;
-}
-select
-{
-border
--
-style
-:
-none
-;
-background
--
-color
-:
-rgba
-(
-0
-0
-0
-0
-)
-}
 select
 :
 :
