--- a/testing/web-platform/tests/html/semantics/forms/the-select-element/select-option-label-rendering.tentative.html
+++ b/testing/web-platform/tests/html/semantics/forms/the-select-element/select-option-label-rendering.tentative.html
@@ -27,13 +27,13 @@ match
 href
 =
 "
-selectlist
+select
 -
-selected
+option
 -
-value
+label
 -
-behavior
+rendering
 -
 ref
 .
@@ -41,26 +41,38 @@ html
 "
 >
 <
+link
+rel
+=
+assert
+title
+=
+"
+option
+elements
+should
+not
+render
+their
+label
+attributes
+when
+used
+in
+select
+.
+"
+>
+<
 select
 >
 <
-selectedoption
-style
+option
+label
 =
-"
-color
-:
-blue
-"
+label
 >
-<
-/
-selectedoption
->
-<
-option
->
-option
+textcontent
 <
 /
 option
