--- a/testing/web-platform/tests/html/semantics/forms/the-select-element/select-overflow-x.tentative.html
+++ b/testing/web-platform/tests/html/semantics/forms/the-select-element/select-overflow-x.tentative.html
@@ -10,9 +10,15 @@ html
 Tests
 that
 select
-respects
-explicit
-size
+button
+part
+text
+is
+truncated
+by
+the
+button
+.
 -
 -
 >
@@ -42,11 +48,11 @@ match
 href
 =
 "
-selectlist
+select
 -
-explicit
+overflow
 -
-size
+x
 -
 ref
 .
@@ -62,13 +68,79 @@ select
 {
 width
 :
-400px
+30px
 ;
 height
 :
-50px
+20px
 ;
 }
+select
+:
+:
+part
+(
+button
+)
+{
+background
+-
+color
+:
+blue
+;
+}
+<
+/
+style
+>
+<
+select
+>
+<
+option
+>
+&
+nbsp
+;
+&
+nbsp
+;
+&
+nbsp
+;
+&
+nbsp
+;
+&
+nbsp
+;
+&
+nbsp
+;
+&
+nbsp
+;
+&
+nbsp
+;
+&
+nbsp
+;
+&
+nbsp
+;
+<
+/
+option
+>
+<
+/
+select
+>
+<
+style
+>
 select
 :
 :
@@ -87,19 +159,4 @@ select
 <
 /
 style
->
-<
-select
->
-<
-option
->
-option
-<
-/
-option
->
-<
-/
-select
 >
