--- a/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-initial-letter-start-001-ref.html
+++ b/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-initial-letter-start-001-ref.html
@@ -58,11 +58,6 @@ position
 :
 relative
 ;
-top
-:
--
-40px
-;
 }
 .
 target
@@ -72,11 +67,12 @@ first
 -
 letter
 {
-font
+initial
 -
-size
+letter
 :
-90px
+2
+1
 ;
 }
 <
@@ -108,4 +104,162 @@ x
 <
 /
 div
+>
+<
+script
+>
+/
+/
+The
+font
+size
+of
+raised
+initial
+letters
+is
+undefined
+[
+1
+]
+.
+/
+/
+Implementations
+especially
+when
+using
+Ahem
+as
+a
+web
+font
+don
+'
+t
+match
+.
+/
+/
+To
+test
+the
+text
+-
+box
+-
+trim
+behavior
+by
+ignoring
+such
+differences
+compute
+/
+/
+the
+expected
+position
+of
+the
+target
+dynamically
+.
+/
+/
+[
+1
+]
+https
+:
+/
+/
+drafts
+.
+csswg
+.
+org
+/
+css
+-
+inline
+-
+3
+/
+#
+sizing
+-
+initial
+-
+letter
+const
+spacer
+=
+document
+.
+getElementsByClassName
+(
+'
+spacer
+'
+)
+[
+0
+]
+;
+const
+target
+=
+document
+.
+getElementsByClassName
+(
+'
+target
+'
+)
+[
+0
+]
+;
+const
+spacer_bottom
+=
+spacer
+.
+getBoundingClientRect
+(
+)
+.
+bottom
+;
+const
+target_bottom
+=
+target
+.
+getBoundingClientRect
+(
+)
+.
+bottom
+;
+target
+.
+style
+.
+top
+=
+{
+spacer_bottom
+-
+target_bottom
++
+40
+}
+px
+;
+<
+/
+script
 >
